feat: new management routes, update user and update log activity
